✨ - add map and phonologisation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <script src="libs/header-attrs-2.9/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+    <link href="libs/tachyons-4.12.0/tachyons.min.css" rel="stylesheet" />
+    <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
+    <script src="libs/panelset-0.2.6/panelset.js"></script>
+    <script src="libs/htmlwidgets-1.5.3/htmlwidgets.js"></script>
+    <script src="libs/jquery-1.12.4/jquery.min.js"></script>
+    <link href="libs/leaflet-1.3.1/leaflet.css" rel="stylesheet" />
+    <script src="libs/leaflet-1.3.1/leaflet.js"></script>
+    <link href="libs/leafletfix-1.0.0/leafletfix.css" rel="stylesheet" />
+    <script src="libs/proj4-2.6.2/proj4.min.js"></script>
+    <script src="libs/Proj4Leaflet-1.0.1/proj4leaflet.js"></script>
+    <link href="libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet" />
+    <script src="libs/leaflet-binding-2.0.4.1/leaflet.js"></script>
   </head>
   <body>
     <textarea id="source">
@@ -16,9 +28,12 @@ class: center, middle, inverse, title-slide
 ## (Un)resolved questions on the voicing effect
 ### Stefano Coretta
 ### IPS @ LMU Munich
-### 2016/12/12 (updated: 2021-07-18)
+### 2016/12/12 (updated: 2021-07-24)
 
 ---
+
+
+
 
 
 class: center middle
@@ -26,6 +41,168 @@ class: center middle
 # ~ Voicing effect ~
 
 ![](img/voicing-effect.png)
+
+---
+
+
+```r
+langs &lt;- c("English", "German", "French", "Hungarian", "Gulf Arabic", "Assamese", "Bengali", "Dutch", "Georgian", "Hindi", "Italian", "Icelandic", "Japanese", "Korean", "Lithuanian", "Norwegian", "Spanish", "Swedish", "Telugu", "Russian", "Czech", "Polish")
+
+longs &lt;- long.lang(langs)
+lats &lt;- lat.lang(langs)
+fams &lt;- str_split_fixed(aff.lang(langs), ",", n = Inf)[,1]
+
+ve_langs &lt;- tibble(longs, lats, fams) %&gt;%
+  st_as_sf(coords = c("longs", "lats"))
+
+pal &lt;- colorFactor(
+  brewer.pal(7, "Accent"),
+  domain = unique(ve_langs$fams)
+)
+
+leaflet(ve_langs) %&gt;% 
+  addTiles() %&gt;%
+  addCircleMarkers(stroke = FALSE, fillOpacity = 0.8, color = ~pal(fams)) %&gt;%
+  addLegend(pal = pal, values = ~fams, title = "Family")
+```
+
+<div id="htmlwidget-0cbab2ead93f19a1d426" style="width:504px;height:504px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0cbab2ead93f19a1d426">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
+
+---
+
+# What is "voicing"?
+
+![](img/voicing.png)
+
+
+---
+
+# Voicing as a physical property
+
+
+---
+
+# Voicing as a linguistic contrast
+
+
+---
+
+# Cross-linguistic differences
+
+---
+
+# Phonologisation
+
+.panelset[
+.panel[.panel-name[Structuralism]
+
+.pull-left[
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
+
+Phonologisation is the creation of a new phonemic contrast, or in other words when a contextual allophone becomes *contrastive* (i.e. a phoneme).
+
+]
+
+.tr[
+— Kiparsky 2015
+]
+]
+
+.pull-right[
+![](img/phonologisation-structuralist.png)
+]
+
+]
+
+.panel[.panel-name[Lexical Ph]
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt5[
+
+A process is phonologised when it goes from being applied post-lexically to being applied lexically.
+
+]
+
+.tr[
+— Kiparsky 1988
+]
+
+]
+
+.panel[.panel-name[Stratal OT]
+
+.pull-left[
+.bg-washed-yellow.b--gold.ba.bw2.br3.shadow-5.ph4.mt5[
+
+Phonologisation occurs when the constraint ordering of the (post-lexical) phrasal domain is copied over onto the (lexical) word and stem domains.
+
+]
+
+.tr[
+— Kiparsky 2000, Bermúdez-Otero 2017
+]
+]
+
+.pull-right[
+![](img/phonologisation-stratal-ot.png)
+]
+
+]
+
+.panel[.panel-name[Life Cycle]
+
+.pull-left[
+.bg-near-white.b--purple.ba.bw2.br3.shadow-5.ph4.mt5[
+
+Phonologisation occurs when a physio-anatomical ("mechanic") phenomenon comes under the control of the speaker/hearer and becomes part of their grammar (more specifically, part of the *phonetic module* of the grammar).
+
+]
+
+.tr[
+— Bermúdez-Otero 2007, Bermúdez-Otero 2015
+]
+]
+
+.pull-right[
+![](img/bermudez-otero-trousdale-2012.png)
+]
+
+]
+
+.panel[.panel-name[Exemplar-based]
+
+.pull-left[
+.bg-washed-yellow.b--orange.ba.bw2.br3.shadow-5.ph4.mt5[
+
+Every type of sound variation/alternation is "phonologised" (i.e. neuro-cognitive permanence) as soon as it is experienced by the speaker/hearer *and* stored in memory.
+
+]
+
+.tr[
+— Johnson 1997, Sóskuthy et al. 2018, Ambridge 2018, Todd et al. 2019
+]
+]
+
+.pull-right[
+![](img/soskuthy2013-183.png)
+
+— Sóskuthy 2013:183
+
+]
+
+]
+
+]
+
+
+
+---
+
+# Contextual effects (within-system)
+
+
+---
+
+# (Attempted) meta-analysis
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
