--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ class: center, middle, inverse, title-slide
 ## (Un)resolved questions on the voicing effect
 ### Stefano Coretta
 ### IPS @ LMU Munich
-### 2016/12/12 (updated: 2021-07-25)
+### 2016/12/12 (updated: 2021-07-26)
 
 ---
 
@@ -44,16 +44,11 @@ class: center middle
 
 ---
 
-class: middle
-
-<div id="htmlwidget-4dfd1564a4baefeed572" style="width:504px;height:504px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4dfd1564a4baefeed572">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
-
----
-
 # What is "voicing"?
 
-![](img/voicing.png)
+.center[
+![:scale 70%](img/voicing.png)
+]
 
 
 ---
@@ -61,15 +56,19 @@ class: middle
 # Voicing as a physical property
 
 .pull-left[
-.center.f1.small-caps[acoustic]
+.center.f1.small-caps.bg-washed-green.ba.bw2.br3.b--dark-green[acoustic]
 
-Periodicity in speech signal.
+.center[Periodicity in the speech signal.]
+
+
+![](img/periodic-waveform.png)
+
 ]
 
 .pull-right[
-.center.f1.small-caps[articulatory]
+.center.f1.small-caps.bg-washed-red.b--dark-red.ba.bw2.br3[articulatory]
 
-Cyclic vibration of the vocal folds.
+.center[Cyclic vibration of the vocal folds.]
 
 &lt;br&gt;
 
@@ -82,19 +81,124 @@ Cyclic vibration of the vocal folds.
 
 # Voicing as a linguistic contrast
 
+.f6[(Haspelmath 2010, 2015, 2020, 2021)]
+
 .pull-left[
 .center.f2.small-caps[language-particular category]
+
+&lt;br&gt;
+
+.pull-left[
+**Northern Italian**
+  - /t/ = [t]
+  - /d/ = [d]
+
+**Spanish**
+  - /t/ = [t]
+  - /d/ = [d], [ð], [θ]
 ]
 
 .pull-right[
-.center.f2.small-caps[comparative concept]
+**Mawayana** .f6[(Coretta 2013)]
+  - /t/ = [t]
+  - /ɗ/ = [ɗ], [d̰], [d]
+
+**Nalögo** .f6[(Alfarano 2021)]
+  - /t/ = [t], [tʰ], [ɾ]
+  - /d/ = [ⁿd], [d]
 ]
+
+]
+
+--
+
+.pull-right[
+.center.f2.small-caps[comparative concept]
+
+&lt;br&gt;
+
+.bg-washed-green.bw2.br3.center[
+&lt;br&gt;
+
+.f2.small-caps[voiceless]
+
+.f2[~]
+
+.f2.small-caps[voiced]
+
+&lt;br&gt;
+]
+
+]
+
+--
+
+.pull-right[
+VE in whispered speech and in word-final-devoicing languages.
+]
+---
+
+class: inverse center middle
+
+# sli.do
+
+# 999000
+
+???
+
+https://app.sli.do/event/bhuf7xqj
+
+---
+
+# Myths
+
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 1**. The voicing effect is a very common phenomenon.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 2**. Polish and Czech do not show a voicing effect.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 3**. The magnitude of the voicing effect in English is greater relative to that of other languages.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 4**. The ratio of Vowel to Consonant duration is stable across speech rates.
+]
+
+---
+
+class: middle
+
+# How common is the voicing effect?
+
+<div id="htmlwidget-34e77d2cac1e73872eeb" style="width:100%;height:400px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-34e77d2cac1e73872eeb">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 
 # Cross-linguistic differences
 
 .center[![](img/some-more-comparative.jpg)]
+
+---
+
+# Direct comparative studies
+
+
+
+---
+
+# Polish and Czech: do they or do they not?
+
+---
+
+# Comparison of English, Italian, Polish
+
+
 
 ---
 
@@ -205,10 +309,56 @@ Every type of sound variation/alternation is "phonologised" (i.e. neuro-cognitiv
 
 # Contextual effects (within-system)
 
+- Greater effect in pre-pausal words.
+
+- Greater effect in stressed vowels.
+
+- Greater effect in word-final syllables.
+
+- Greater effect in word-initial syllables along the hierarchy trisyllabic &gt; disyllabic &gt; monosyllabic.
+
+- Greater effect in lower vowels.
+
+--
+
+They all have in common greater baseline vowel duration.
+
+---
+
+# Contextual effects (within-system)
+
+Manner
+
+- Stop vs fricative.
+
+- Obstruent vs sonorant.
+
+--
+
+Mixed results.
+
+
+
 
 ---
 
 # (Attempted) meta-analysis
+
+---
+
+# Accounts
+
+But what is the explanandum?
+
+---
+
+# Summary
+
+
+---
+
+# What's next?
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
